--- a/app/css/style.css
+++ b/app/css/style.css
@@ -18,6 +18,7 @@
 body {
   background-color: var(--backgroundColor);
   color: var(--primaryTextColor);
+  overflow-wrap: break-word;
   /* color:rgb(49, 44, 81); */
 }
 table,
@@ -30,11 +31,13 @@ td.top-left {
   border-bottom: var(--borderStyle);
   padding-right: 20px;
   text-align: center;
+  overflow-wrap: break-word;
 }
 td.top-right {
   border-left: var(--borderStyle);
   border-bottom: var(--borderStyle);
   text-align: center;
+  overflow-wrap: break-word;
   /* height: 50%; */
 }
 td.bottom-left {
@@ -43,12 +46,14 @@ td.bottom-left {
   border-bottom: none;
   padding-right: 20px;
   text-align: center;
+  overflow-wrap: break-word;
 }
 td.bottom-right {
   border-left: var(--borderStyle);
   border-top: var(--borderStyle);
   border-bottom: none;
   text-align: center;
+  overflow-wrap: break-word;
 }
 tr {
   border-bottom: none;
@@ -90,6 +95,8 @@ p.sub-instruction {
   margin-left: 28%;
   margin-top: 10px;
   margin-bottom: 20px;
+  /* left: 50%; */
+  /* transform: translateX(-50%); */
 }
 .bored {
   border: 1px solid #312c51;
@@ -107,6 +114,11 @@ ol.collection {
     rgba(0, 0, 0, 0.1) 0px 10px 10px -5px;
   text-align: left;
 }
+
+ol li {
+  overflow-wrap: break-word;
+}
+
 .collection,
 .collection-item {
   background-color: #312c51;
@@ -117,3 +129,51 @@ ul.collection.shad {
   box-shadow: rgba(0, 0, 0, 0.35) 0px 20px 25px -5px,
     rgba(0, 0, 0, 0.1) 0px 10px 10px -5px;
 }
+
+.extend-info {
+  /* 
+  border-radius: 10px;
+  background-color: #312c51;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 20px 25px -5px,
+  rgba(0, 0, 0, 0.1) 0px 10px 10px -5px;
+  color: var(--secondaryTextColor); */
+  padding: 2%;
+  margin-bottom: 12px;
+  user-select: none;
+  font-size: 16px;
+  width: 80%;
+  overflow-wrap: break-word;
+}
+
+.extend-info ol {
+  overflow-y: scroll;
+}
+
+.extend-info h5 {
+  text-align: center;
+  border-radius: 10px;
+  background-color: var(--backgroundColor);
+  padding: 2%;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 20px 25px -5px,
+    rgba(0, 0, 0, 0.1) 0px 10px 10px -5px;
+}
+
+.further-info {
+  display: none;
+}
+.caution {
+  color: white;
+}
+.blur {
+  filter: blur(2px);
+}
+
+.desc-text,
+.time {
+  font-style: italic;
+  margin-left: 11px;
+  margin-top: 5px;
+  font-size: 13px;
+  margin-bottom: 0;
+}
+/* jonfvkjnfvkjebfrvhbcnvjndsfvsdbnvdsjvkjdsnvslkjdvnlkndm kjdfngvjndkmvnfgvjngdkjgnvkjnkdjnfgviunkjdfnvkjndfvpiesdvnjdfsijbgdkjvnkjsnvijnjuhnjjbjhbhj n */
