--- a/app/css/style.css
+++ b/app/css/style.css
@@ -143,7 +143,7 @@ ul.collection.shad {
 }
 
 .extend-info ol {
-  height: 250px;
+  max-height: 250px;
   overflow-y: scroll;
 }
 
@@ -216,7 +216,7 @@ div.br {
   background-color: #48426d;
 }
 
-.scrollable::-webkit-scrollbar {
+/* .scrollable::-webkit-scrollbar {
   width: 12px;
 }
 
@@ -232,4 +232,4 @@ div.br {
 
 .scrollable::-webkit-scrollbar-thumb:hover {
   background-color: #f1aa9b;
-}
+} */
