--- a/app/css/style.css
+++ b/app/css/style.css
@@ -244,3 +244,47 @@ div.br {
 .scrollable::-webkit-scrollbar-thumb:hover {
   background-color: #f1aa9b;
 } */
+.grid-wrapper {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  margin-top: 10%;
+  gap: 100px;
+  /* margin-left: auto; */
+  /* margin-right: auto; */
+  padding: 0 20px;
+}
+
+.icon {
+  width: 50px;
+  height: 50px;
+}
+.cent {
+  display: flex;
+  justify-content: center;
+  justify-items: center;
+  /* display: grid;
+  grid-template-columns: 1fr; */
+}
+#gmail .ic-text {
+  margin-left: 7px;
+}
+#github .ic-text {
+  margin-left: 4px;
+}
+
+#github,
+#gmail,
+#linkedin {
+  transition: 0.3s;
+  cursor: pointer;
+}
+#github:hover,
+#gmail:hover,
+#linkedin:hover {
+  transform: scale(1.3, 1.3);
+  color: var(--secondaryTextColor);
+}
+.toast-color {
+  color: var(--secondaryTextColor);
+  background-color: #312c51;
+}
